@@ -1,1 +1,0 @@
-io.crate.plugin.SigarPlugin
